<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN_BG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <TextView
        android:id="@+id/uye_giris_txt"
        android:layout_width="323dp"
        android:layout_height="87dp"
        android:layout_marginTop="184dp"
        android:text="@string/beRegister"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signUp_Button"
        style="@style/BUTTON_BG"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="176dp"
        android:background="@drawable/button_round_style"
        android:backgroundTint="@color/button_color"
        android:text="@string/button"
        android:textColorLink="#617DF3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="145dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/SCREEN_BG"
        android:layout_width="400dp"
        android:layout_height="267dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signUp_Button"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:id="@+id/verticalLinear"
            style="@style/SCREEN_BG"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="150dp">

            <EditText
                android:id="@+id/name_EditText"
                style="@style/TEXT_BG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="150dp" />

            <EditText
                android:id="@+id/surname_EditText"
                style="@style/TEXT_BG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="text"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="150dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/e_mail_editTxt"
            style="@style/TEXT_BG"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="211dp" />

        <EditText
            android:id="@+id/student_id"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/student_id"
            android:inputType="text"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="256dp" />

        <EditText
            android:id="@+id/password_EditText"
            style="@style/TEXT_BG"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="LabelFor,TextFields"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="301dp" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="left" />

    </LinearLayout>

    <ImageButton

        android:id="@+id/previousPageButton"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/back_button_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>