<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN_BG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_uye_giris_txt"
        android:layout_width="328dp"
        android:layout_height="107dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="136dp"
        android:text="@string/member_login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        style="@style/TEXT_BG"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/login_linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="375dp"
        android:layout_height="523dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_e_mail_editTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                style="@style/TEXT_BG"
                android:hint="E-Mail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_password_EditText"
                android:layout_width="0dp"
                style="@style/TEXT_BG"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="LabelFor,TextFields"
           />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/register_Button"
                    android:layout_width="141dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button"
                    style="@style/BUTTON_BG"
                    android:background="@drawable/button_round_style"
                    android:backgroundTint="@color/button_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.863"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="142dp"
                    android:layout_height="70dp"
                    style="@style/BUTTON_BG"
                    android:text="Giriş Yap"
                    android:background="@drawable/button_round_style"
                    android:backgroundTint="@color/button_color"
                    app:layout_constraintEnd_toStartOf="@+id/register_Button"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
